--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,28 @@
-.App {
-  text-align: center;
+* {
+  margin: 0px;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+html, body {
+  width: 100%;
+  height: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body {
+  background: #f1f1f1;
 }
-
-.App-link {
-  color: #61dafb;
+#root {
+  width: 100%;
+  height: 100%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Contenedor de la App */
+.container {
+  padding-bottom: 80px;
+}
+/* El header */
+.header {
+  font-size: 22px;
+  font-weight: bold;
+  font-style: italic;
+  color: #f1f1f1;
+  background: #3367d6;
+  padding: 40px;
 }
